--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+* Why doesn't type inference work for Concat function?
+
 * [spec] Clean up support for abstract types.
  - Rename FBLE_POLY_APPLY_EXPR to FBLE_MISC_TYPE_APPLY_EXPR?
  - Add more tests.
