--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,8 @@
 
+* Define separate fbleobj_c and fbleobj_aarch64 functions.
+  - So we can more explicitly specify what kind of objects to build if
+    desired.
+
 * Clean up generate_c things
   - Don't require access to private includes.
   - Better instructions on required include paths.
