Define separate fbleobj_aarch64 and fbleobj_c procs.
So it's easier to specify explicitly what target to use when compiling
fble code.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
-
-* Define separate fbleobj_c and fbleobj_aarch64 functions.
-  - So we can more explicitly specify what kind of objects to build if
-    desired.
+* Factor out common strings and error messages in generated c code.
+  - See if it helps with compile times.
+* Hide profiling condition behind function in generated c code.
+  - See if it helps with compile times.
 
 * Clean up generate_c things
   - Don't require access to private includes.
