Switch to configure && ninja build flow.
Instead of running make, the user should run configure followed by
ninja. The bulk of this change is support for building the build
directory instead of from the source directory.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,7 @@
+* Remove uses of pool = console?
+* Generate build.ninja.full and then copy to build.ninja, to avoid messing up
+  the bootstrap ninja file in case of build.tcl error.
+
 * Release
  - Add configure script.
  - Add --version option to things.
