Remove 'pc' field of FbleStack.
Now that the abort function has been removed, pc was only being used by
the interpreter. But the interpreter can easily enough keep track of its
own pc.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,10 @@
+* Optimize code for generate_c for low gcc memory use:
+ - Don't emit unused pc labels
+ - Wrap function call while loop in a separate function.
+ - Use shorter labels for function names.
+ - Avoid introducing variables in {} statements, use shared local variables
+   for the full function.
+
 * Release
  - Add --version option to things.
  - Clean up libfble interface.
