--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+* Figure out timeout issue for gdb test.
 * Optimize code for generate_c for low gcc memory use:
  - Don't emit unused pc labels
  - Wrap function call while loop in a separate function.
