--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,10 @@
 * Figure out timeout issue for gdb test.
 * Optimize code for generate_c for low gcc memory use:
- - Don't emit unused pc labels
- - Wrap function call while loop in a separate function.
  - Use shorter labels for function names.
  - Avoid introducing variables in {} statements, use shared local variables
    for the full function.
+   Or use varargs functions instead of variables?
+     FbleNewListValue, FbleThreadCall, etc.
 
 * Release
  - Add --version option to things.
