--- a/TODO.txt
+++ b/TODO.txt
@@ -4,11 +4,8 @@
 
 * Figure out timeout issue for gdb test.
 * Optimize code for generate_c for low gcc memory use:
- - Use shorter labels for function names.
- - Avoid introducing variables in {} statements, use shared local variables
-   for the full function.
-   Or use varargs functions instead of variables?
-     FbleNewListValue, FbleThreadCall, etc.
+ - Use shorter labels for function names?
+ - Only output labels for pc aborts that are actually jumped to.
 
 * Release
  - Add --version option to things.
