--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 * Move fble-invaders to pkg/invaders directory
  - And same with other binaries, rather than have them deeper into the package
    module directory structure.
+   fble-sat, fble-invaders, fble-pinball, fble-graphics
 
 * Figure out timeout issue for gdb test.
 * Optimize code for generate_c for low gcc memory use:
