--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,10 @@
   to sat/sat-tests, but accidentally referencing the old sat/Sat/sat-tests
   path.
 
+* Rename FbleVectorFree and FbleVectorInit to FbleInitVector and
+  FbleFreeVector?
+ - Or something that makes sense from a consistency point of view.
+
 * Error checking of arguments to configure
  - absolute path instead of relative?
  - duplicate options?
@@ -20,6 +24,10 @@
 
 * Check whether tclsh is widely available or it should be changed to tclsh8.6
   or some such.
+ - I just noticed a past project I used:
+  #!/bin/sh
+  # configure script for focus\
+  exec tclsh "$0" "$@"
 
 * Write a tutorial
   See thoughts/fble.tutorial.txt
