--- a/README.adoc
+++ b/README.adoc
@@ -66,5 +66,5 @@ desired.
   
 == Next Steps ==
 
-See tutorials/Tutorials.md for a series of tutorials about the fble language
-to get started.
+See link:tutorials/Tutorials.md[] for a series of tutorials about the
+fble language to get started.
