--- a/tutorials/FirstProgram.adoc
+++ b/tutorials/FirstProgram.adoc
@@ -1,4 +1,5 @@
-# First Program
+First Program
+=============
 
 This tutorial walks you through writing and testing your first fble program.
 You'll implement a bitwise `AND` operation on a 4 bit bit-vector. To
@@ -9,13 +10,13 @@ In your favorite text editor, start a new file called `Hello.fble`. The
 `.fble` extension is used for fble programs, and required for the fble
 interpreter and compiler to be able to locate your code.
 
-## Types
+== Types ==
 
 We'll start by defining types for a single bit and a 4 bit bit-vector:
 
-    @ Unit@ = *();
-    @ Bit@ = +(Unit@ 0, Unit@ 1);
-    @ Bit4@ = *(Bit@ 3, Bit@ 2, Bit@ 1, Bit@ 0);
+  @ Unit@ = *();
+  @ Bit@ = +(Unit@ 0, Unit@ 1);
+  @ Bit4@ = *(Bit@ 3, Bit@ 2, Bit@ 1, Bit@ 0);
 
 Actually, this code defines three types, named `Unit@`, `Bit@`, and `Bit4@`.
 The language requires type names to end with the `@` character, to distinguish
@@ -44,18 +45,18 @@ Each field has type `Bit@`. This represents a bit vector of 4 bits. We'll call
 bit 3 the most significant bit and put it on the left as is conventional, but
 it doesn't really matter for the bitwise operations defined in this tutorial.
 
-## Values
+== Values ==
 
 Now that we have the `Bit@` and `Bit4@` types defined, we can declare some
 variables of those types:
 
-    Unit@ Unit = Unit@();
+  Unit@ Unit = Unit@();
 
-    Bit@ 0 = Bit@(0: Unit);
-    Bit@ 1 = Bit@(1: Unit);
+  Bit@ 0 = Bit@(0: Unit);
+  Bit@ 1 = Bit@(1: Unit);
 
-    Bit4@ x = Bit4@(0, 0, 1, 1);
-    Bit4@ y = Bit4@(1, 0, 1, 0);
+  Bit4@ x = Bit4@(0, 0, 1, 1);
+  Bit4@ y = Bit4@(1, 0, 1, 0);
 
 This code declares 5 variables, named `Unit`, `0`, `1`, `x`, and `y`. The
 variable declarations start with the type of the variable, followed by the
@@ -70,19 +71,19 @@ Union and struct values are immutable, lightweight, and passed by value. A
 decent implementation of fble will implement a value of `Bit4@` like `x` or
 `y` easily in a single machine word.
 
-## Functions
+== Functions ==
 
 We'll define two functions in our first program: A function `And` that
 computes the `AND` operation on individual bits, and a function `And4` to
 compute bitwise `AND` on our 4 bit bit-vectors:
 
-    (Bit@, Bit@) { Bit@; } And = (Bit@ a, Bit@ b) {
-      a.?(0: 0, 1: b);
-    };
+  (Bit@, Bit@) { Bit@; } And = (Bit@ a, Bit@ b) {
+    a.?(0: 0, 1: b);
+  };
 
-    (Bit4@, Bit4@) { Bit4@; } And4 = (Bit4@ a, Bit4@ b) {
-      Bit4@(And(a.3, b.3), And(a.2, b.2), And(a.1, b.1), And(a.0, b.0));
-    };
+  (Bit4@, Bit4@) { Bit4@; } And4 = (Bit4@ a, Bit4@ b) {
+    Bit4@(And(a.3, b.3), And(a.2, b.2), And(a.1, b.1), And(a.0, b.0));
+  };
 
 The functions `And` and `And4` are variables just like `Unit`, `0`, `1`, `x`,
 and `y`. To declare these variables, we start with the type, followed by the
@@ -116,19 +117,19 @@ fields of the arguments `a` and `b`. For example, `And(a.3, b.3)` calls the
 `And` function with bit 3 of `a` and bit 3 of `b`, and uses the result for bit
 3 of the result of the `And4` function.
 
-## Testing the Result
+== Testing the Result ==
 
 Now that we've defined our bitwise `And4` operation, let's test the result of
 running it on our previously defined `Bit4@` values `x` and `y`:
 
-    Bit4@ z = And4(x, y);
+  Bit4@ z = And4(x, y);
 
-    Unit@ _ = z.3.0;
-    Unit@ _ = z.2.0;
-    Unit@ _ = z.1.1;
-    Unit@ _ = z.0.0;
+  Unit@ _ = z.3.0;
+  Unit@ _ = z.2.0;
+  Unit@ _ = z.1.1;
+  Unit@ _ = z.0.0;
 
-    Unit;
+  Unit;
 
 We define the variable `z` as the bitwise `AND` of `x` and `y`. Because `x` is
 `0011` and `y` is `1010`, we expect `z` to be `0010`.
@@ -163,7 +164,7 @@ We end the program with `Unit;`. An fble program describes a value. In this
 case, we only care that the program runs without getting a runtime error, so
 it doesn't matter what value we return from the program.
 
-## Running the program.
+== Running the program ==
 
 We've finished writing our first fble program! The next step is to try running
 it. Our fble implementation comes with an executable called `fble-test` that
@@ -175,7 +176,7 @@ Try running your program using the following:
 
     fble-test -I . -m /Hello%
 
-**Note:** If you have built fble yourself and haven't yet installed
+NOTE: If you have built fble yourself and haven't yet installed
 `fble-test`, it should be available at the path `fble/test/fble-test` in your
 build directory.
 
@@ -196,13 +197,13 @@ errors. To force an error, change one of the `Unit@ _ = ...` lines. For
 example, change `Unit@ _ = z.3.0;` to `Unit@ _ = z.3.1;`. Rerun the command
 above, and you should get an error message:
 
-    Hello.fble:29:15: error: union field access undefined: wrong tag
+  Hello.fble:29:15: error: union field access undefined: wrong tag
 
 This error message means you tried to access a union field that was different
 from the tag associated with the union value. In this case, the union value
 was tagged with `0`, and you tried to access its field `0`.
 
-## Exercises
+== Exercises ==
 
 1. Try implementing bitwise `NOT`, `OR` and `XOR` functions.
 2. Try defining a `Bit8@` type and implementing a bitwise `And8` operation for
@@ -211,8 +212,8 @@ was tagged with `0`, and you tried to access its field `0`.
 3. Try implementing a 4-bit `Add` function that can add two `Bit4@`
    interpreted as twos-complement integers.
 
-## Next Steps
+== Next Steps ==
 
-Head over to MainDriver-1.md to learn how to output the bit vector value
+Head over to link:MainDriver-1.adoc[] to learn how to output the bit vector value
 computed by your program.
 
