Have FbleThreadCall function execute code as well.
Rather than just push the function on top of the stack, execute the
function too. Factors out common code that would otherwise have to be
done by all callers of FbleThreadCall, and helps hide internals of how
to invoke the run function.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+* See if FbleStack and/or FbleThread can be made abstract.
+
 * Man pages
  - Update --version and --help for each installed binary.
   fble-app
