Set up initial doxygen config.
Start converting doc comments, but still lots more to do.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+* Fix dependency tracking for configure
+  For example, rerun configure if any of the .in files change.
 * See if FbleStack and/or FbleThread can be made abstract.
 
 * Man pages
