--- a/README.adoc
+++ b/README.adoc
@@ -28,6 +28,7 @@ tutorials/:: Tutorials for getting started with fble.
 To build and run the tests for Fable, the following software is required. The
 version numbers provided are versions that are known to work:
 
+Doxygen 1.8.13:: For source code documentation.
 GNU Binutils for Debian 2.31.1:: For assembling compiled fble programs.
 GNU Bison 3.3.2:: For generating the fble parser.
 GNU Compiler Collection (Debian 8.3.0-6) 8.3.0:: For compiling fble.
